Finishing for #419 - ini-related mechanism revised, length type modified